# matrix2d

./: CMakeLists.txt  README.md  conanfile.py  main.cpp  maker.sh
cmake/: config.cmake.in
example/: example.cpp
include/matrix2d/: index.hpp  matrix2d.hpp  matrix2d.tpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  test_cases.cpp
